--- a/Extension-Chrome/popup.html
+++ b/Extension-Chrome/popup.html
@@ -61,8 +61,8 @@
   <!-- <div id="loading" class="button-36">Waiting for page to load...</div>
   <div id="default" class="button-33">No iframes detected!</div>
   <div id="error" class="button-35">Sorry, an error occurred retrieving iframe information on this page.</div> -->
-  <div id="footer" style="font-size: xx-small;">Iframe Detector powered by <a id="siteLink"
-      href="https://3block.systems/">3Block</a></div>
+  <!-- <div id="footer" style="font-size: xx-small;">Iframe Detector powered by <a id="siteLink"
+      href="https://3block.systems/">3Block</a></div> -->
 </body>
 <script type="module" src="popup.js"></script>
 <script type="module" src="background.js"></script>
